--- a/create_ec2.yaml
+++ b/create_ec2.yaml
@@ -7,8 +7,10 @@
      group/aws:
         region: "us-east-1"
   tasks:
+     - name: Include subnet
+       import_tasks: create_vpc.yml
      - name: Provision Bobs EC2 instance
-       ec2:
+       amazon.aws.ec2_instance:
          key_name: pair
          group: Module5-developer-sg
          instance_type: t3.nano
@@ -24,7 +26,7 @@
          count_tag:
             Name: Module5 Bob
      - name: Provision Mary EC2 instance
-       ec2:
+       amazon.aws.ec2_instance:
          key_name: pair
          group: Module5-developer-sg
          instance_type: t3.nano
@@ -38,4 +40,6 @@
          assign_public_ip: yes
          exact_count: 1
          count_tag:
-            Name: Module5 Mary         
+            Name: Module5 Mary  
+ 
+       
