--- a/create_ec2.yaml
+++ b/create_ec2.yaml
@@ -2,44 +2,41 @@
 - hosts: localhost
   gather_facts: no
   vars:
-     ami_id: "ami-022e1a32d3f742bd8"
+     ami_id: ami-022e1a32d3f742bd8
   module_defaults:
      group/aws:
         region: "us-east-1"
   tasks:
-     - name: Include subnet
-       import_tasks: create_vpc.yaml
+     - name: Include variables
+       ansible.builtin.include_vars:
+         file: subnet_id.txt
      - name: Provision Bobs EC2 instance
        amazon.aws.ec2_instance:
          key_name: pair
-         group: Module5-developer-sg
+         security_group: Module5-developer-sg
          instance_type: t3.nano
-         image: "{{ ami_id }}"
-         instance_tags:
+         image_id: "{{ ami_id }}"
+         tags:
            Name: Module5 Bob
            Module: 5
            Department: Accounting
          wait: yes
-         vpc_subnet_id: "{{ public_subnet.subnet.id }}"
-         assign_public_ip: yes
-         exact_count: 1
-         count_tag:
-            Name: Module5 Bob
+         vpc_subnet_id: "{{ subnet_id }}"
+         network:
+           assign_public_ip: true
      - name: Provision Mary EC2 instance
        amazon.aws.ec2_instance:
          key_name: pair
-         group: Module5-developer-sg
+         security_group: Module5-developer-sg
          instance_type: t3.nano
-         image: "{{ ami_id }}"
-         instance_tags:
+         image_id: "{{ ami_id }}"
+         tags:
            Name: Module5 Mary
            Module: 5
            Department: DevOps
          wait: yes
-         vpc_subnet_id: "{{ public_subnet.subnet.id }}"
-         assign_public_ip: yes
-         exact_count: 1
-         count_tag:
-            Name: Module5 Mary  
+         vpc_subnet_id: "{{ subnet_id }}"
+         network:
+           assign_public_ip: true 
  
        
